# iristrading

./: .gitignore  CMakeLists.txt  Cargo.toml  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  config.toml  main.cpp  readme.md  requirements.txt  setup.sh  trading_env.py  train_agent.py
data/: BTCUSDT_240.csv  BTCUSDT_D.csv  ETHUSDT_240.csv  ETHUSDT_60.csv  ETHUSDT_D.csv  SOLUSDT_240.csv  SOLUSDT_60.csv  SOLUSDT_D.csv
examples/: backtest_example.cpp
include/: candle.h  coin.h  indicators.h  smt_analysis.h  utils.h
python/: agent.py  brain.py  brain_multisymbol.py
python/script/: load_multitf_multisymbol.py
python/scripts/: download_ohlcv_ccxt.py  import_csv_to_db.py
report/: success_log.txt
scripts/: generate_sample_csv.py
simulator/: README.md
simulator/include/: backtest_engine.h  bybit_simulator.h  order.h  trading_engine.h
simulator/src/: backtest_engine.cpp  bybit_simulator.cpp  trading_engine.cpp
src/: candle.cpp  coin.cpp  config.rs  data_loader.rs  database.rs  ict.rs  indicators.cpp  main.rs  portfolio.rs  risk.rs  smt_analysis.cpp  training.rs  utils.cpp
utils/: data_loader.py  ict_feature.py
